@@ -15,7 +15,6 @@
  */
 
 import gradlebuild.basics.repoRoot
-import gradlebuild.basics.testJavaVersion
 import gradlebuild.cleanup.services.CachesCleaner
 import gradlebuild.integrationtests.extension.IntegrationTestExtension
 import gradlebuild.integrationtests.setSystemPropertiesOfTestJVM
@@ -29,7 +28,7 @@ plugins {
 val intTestHomeDir = repoRoot().dir("intTestHomeDir")
 
 val cachesCleanerService = gradle.sharedServices.registerIfAbsent("cachesCleaner", CachesCleaner::class) {
-    parameters.gradleVersion = moduleIdentity.version.map { it.version }
+    parameters.gradleVersion = gradleModule.identity.version.map { it.version }
     parameters.homeDir = intTestHomeDir
 }
 
@@ -88,9 +87,4 @@ fun DistributionTest.configureGradleTestEnvironment() {
 
 fun DistributionTest.setJvmArgsOfTestJvm() {
     jvmArgs("-Xmx${project.the<IntegrationTestExtension>().testJvmXmx.get()}", "-XX:+HeapDumpOnOutOfMemoryError")
-
-    val testJavaVersion = JavaLanguageVersion.of(project.testJavaVersion)
-    if (!testJavaVersion.canCompileOrRun(8)) {
-        jvmArgs("-XX:MaxPermSize=768m")
-    }
 }
